# raytracing

./: .gitignore  CMakeLists.txt  README.md  main.cpp
color/: Color.cpp  Color.h  Material.cpp  Material.h  Texture.cpp  Texture.h
math/: Bonds.cpp  Bonds.h  Solids.h  Support.cpp  Support.h  Transforms.cpp  Transforms.h
math/primitives/: Direction.h  Line.h  Point.h  Vector.cpp  Vector.h
math/solids/: Cylinder.h  Plane.h  Solid.h  Sphere.h
render/: Camera.h  ImageSaver.cpp  ImageSaver.h  Pixel.h  Renderer.cpp  Renderer.h  Scene.h
